Completed basic design of splash, signup, and registration pages

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -8,7 +8,7 @@
 .navbar>.container {
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .navbar__brand {
@@ -47,7 +47,7 @@
     border-radius: .3125rem;
 }
 
-.btn-primary {
+.btn-register {
     color: #fff;
     background-color: #2568ef;
     border-color: #2568ef;
@@ -56,6 +56,12 @@
 
 a {
     text-decoration: none;
+}
+
+@media screen and (max-width: 449px) {
+    .navbar__btns {
+        margin: 20px 0;
+    }
 }
 
 
