--- a/client/src/components/RegStep2/RegStep2.css
+++ b/client/src/components/RegStep2/RegStep2.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
@@ -43,4 +43,4 @@ button {
     cursor: pointer;
     text-align: center;
     font-size: 14px;
-}
+} */
