--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #0576B3;
+}
+
 .App {
   padding-bottom: 20px;
   margin: auto;
@@ -14,4 +18,154 @@
 
 .App__main {
   background-color: #0576B3;
+}
+
+/* .LoginPage {
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px 0;
+  text-align: center;
+  color: antiquewhite;
+} */
+
+
+.LoginPage {
+  margin: 0 auto;
+  text-align: center;
+  color: antiquewhite;
+}
+
+
+label {
+  display: none;
+}
+
+.login-form {
+  margin: 20%;
+  background: #f2f2f2;
+  padding: 5%;
+  border-radius: 2%;
+  font-size: 12px;
+}
+
+input[type=text], input[type=email], input[type=password], input[type=date], select, textarea {
+  width: 80%;
+  padding: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  font-size: 14px;
+  margin: 14px;
+}
+
+.login-control-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  padding: 6px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  margin: 10px -30px 10px -30px;
+}
+
+fieldset {
+  border: 0;
+}
+
+.header {
+  font-size: 30px;
+}
+
+.button {
+  width: 100%;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.RegistrationPage {
+  margin: 0 auto;
+  text-align: center;
+  color: antiquewhite;
+}
+
+.form_container {
+  min-width: 315px;
+  margin: 0 auto;
+  text-align: center;
+  color: antiquewhite;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.btn__container {
+  display: flex;
+  justify-content: center;
+}
+
+form .btn {
+  width: 85%;
+  min-width: 120px;
+  margin: 20px 7%;
+  padding: 12px 20px;
+  color: #fff;
+  background-color: #1DC0FC;
+  border-color: #1DC0FC;
+  box-shadow: none;
+  cursor: pointer;
+  text-align: center;
+  font-size: 14px;
+  border-radius: 4px;
+  flex: 1;
+}
+
+.upper {
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 685px) {
+  .card__container {
+    flex-direction: column;
+  }
+
+  .section__1 {
+    min-width: 375;
+    width: 80%;
+    margin: 2%;
+    height: 180px;
+  }
+
+  .section__3 {
+    display: block;
+    margin: 40px;
+  }
+
+  .section__3_image {
+    height: 180px;
+    width: 200px;
+    margin: auto;
+    padding: 0;
+  }
+}
+
+/* form .btn {
+  width: 80%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 14px;
+} */
+
+@media screen and (min-width: 375px) {
+  .RegistrationPage, .LoginPage {
+      width: 50%;
+  }
+
+  
 }
