--- a/client/src/components/HomeSplash/HomeSplash.css
+++ b/client/src/components/HomeSplash/HomeSplash.css
@@ -48,7 +48,7 @@ p {
     color: antiquewhite;
     margin: 55px auto;
     text-align: center;
-    height: 300px;
+    height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
@@ -99,7 +99,7 @@ p {
 }
 
 .section__3_image {
-    padding: 150px;
+    padding: 120px;
     width: 200px;
     background-repeat: no-repeat;
     
@@ -118,9 +118,6 @@ p {
     padding: 0 20px;
 }
 
-.how-it-works {
-    text-align: center;
-}
 
 .d_flex {
     display: flex;
@@ -129,6 +126,9 @@ p {
 
 .how-it-works {
     color: antiquewhite;
+    text-align: center;
+    max-width: 820px;
+    margin: auto;
 }
 
 .hw__container {
@@ -140,7 +140,7 @@ p {
 }
 
 .signup__container {
-    height: 200px;
+    height: 100px;
     background-color: #1DC0FC;
 }
 
