--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -1,69 +1,8 @@
-* {
+/* * {
     box-sizing: border-box;
-}
-
-.login-form {
-    margin: 20%;
-    background: #f2f2f2;
-    padding: 5%;
-    border-radius: 2%;
-    font-size: 12px;
-}
-  
-input[type=text], input[type=email], input[type=password], select, textarea {
-    width: 80%;
-    padding: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-    font-size: 14px;
-    /* margin: 14px; */
-}
-
-.login-control-group {
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    /* width: 80%; */
-    /* padding: 6px; */
-    /* border: 1px solid #ccc; */
-    /* border-radius: 4px; */
-    /* resize: vertical; */
-    margin: 10px -30px 10px -30px;
-}
-
-fieldset {
-    border: 0;
-}
-
-.header {
-    font-size: 30px;
-}
-  
-/* label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
 } */
 
-/* .button {
-    width: 100%;
-    height: 64px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-  
-button {
-    background-color: rgb(42, 71, 235);
-    width: 80%;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
-    font-size: 14px;
-}
+
   
 /* button:hover {
     background-color: #45a049;
