--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
@@ -62,7 +62,7 @@ a {
     .navbar__btns {
         margin: 20px 0;
     }
-}
+} */
 
 
 
