--- a/client/src/components/HomeSplash/HomeSplash.css
+++ b/client/src/components/HomeSplash/HomeSplash.css
@@ -1,7 +1,6 @@
-.header {
+/* .header {
     padding: 30px 20px;
     background-image: url("https://cdn.pixabay.com/photo/2015/09/13/10/06/pay-937884_960_720.jpg");
-    /* filter: invert(100%); */
     background-color: #5F6263;
     background-size: cover;
     background-repeat: no-repeat;
@@ -149,5 +148,5 @@ p {
     justify-content: center;
     align-items: center;
     height: 100%;
-}
+} */
 
