--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -148,12 +148,19 @@ form .btn {
 
 .navbar__brand {
   display: inline-block;
-  padding-top: .3125rem;
-  padding-bottom: .3125rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
+  padding: 14px 0;
+}
+
+.navbar__logged-in {
+  font-size: 21px;
+}
+
+.navbar__logged-in>a:link,.navbar__logged-in>a:visited {
+  color: mintcream;
 }
 
 .d-flex {
@@ -292,6 +299,10 @@ p {
   margin: 25px 45px;
 }
 
+.section__3:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+
 .section__3_image {
   padding: 120px;
   width: 200px;
@@ -329,13 +340,9 @@ p {
   padding: 30px;
 }
 
-.row_reverse {
-  flex-direction: row-reverse;
-}
-
 .signup__container {
   height: 100px;
-  background-color: #1DC0FC;
+  background-color: mintcream;
 }
 
 .signup__btn {
@@ -343,6 +350,14 @@ p {
   justify-content: center;
   align-items: center;
   height: 100%;
+}
+
+.logo {
+  font-size: 27px;
+}
+
+a.logo:link,  a.logo:visited {
+  color: mintcream;
 }
 
 @media screen and (max-width: 685px) {
@@ -370,11 +385,11 @@ p {
   }
 }
 
-@media screen and (max-width: 449px) {
+/* @media screen and (max-width: 449px) {
   .navbar__btns {
       margin: 20px 0;
   }
-}
+} */
 
 @media screen and (min-width: 640px) {
   .RegistrationPage, .LoginPage {
