--- a/client/src/components/NumerologyReport/NumerologyReport.css
+++ b/client/src/components/NumerologyReport/NumerologyReport.css
@@ -18,13 +18,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: mintcream;
 }
 
 .header_text {
-    color: antiquewhite;
+    color: #0576B3;
     width: 220px;
     height: 220px;
-    border: 9px solid antiquewhite;
+    border: 9px solid #0576B3;
     border-radius: 50%;
     margin: 30px 36px;
     text-align: center;
