--- a/client/src/components/NumerologyReportData/NumerologyReportData.css
+++ b/client/src/components/NumerologyReportData/NumerologyReportData.css
@@ -1,4 +1,117 @@
-.reportData__wrapper {
+.NumerologyReportData {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.section__container {
+    display: flex;
+    margin: 10% 0;
+    padding: 25px;
+    color: antiquewhite;
+}
+
+.section__container:nth-child(even){
+    flex-direction: row-reverse;
+}
+
+.image {
+    position: relative;
+    text-align: center;
+    color: antiquewhite;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    flex: 1;
+}
+
+.image__motivation {
+    background-image: url(https://picsum.photos/200);
+}
+
+.image__inner_self {
+    background-image: url(https://picsum.photos/201);
+}
+
+.image__expression {
+    background-image: url(https://picsum.photos/202);
+}
+
+.image__karmic_lessons {
+    background-image: url(https://picsum.photos/203);
+}
+
+.image__hidden_tendencies {
+    background-image: url(https://picsum.photos/204);
+}
+
+.image__subconscious_response {
+    background-image: url(https://picsum.photos/205);
+}
+
+.image > .number {
+    font-size: 12vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 2px 2px 8px black
+}
+
+.data__text {
+    padding: 0px 30px;
+    flex: 1;
+    margin: 70px 0;
+}
+
+.paragraph {
+    margin: 22px 0;
+}
+
+.data__text > h2 {
+    margin: 0 0 5px 0;
+    font-size: 40px;
+}
+
+.data__text > div {
+    font-size: 20px;
+}
+
+.section__container > .number {
+    font-size: 100%;
+}
+
+.header_text > a:link, .header_text > a:visited {
+    text-decoration: none;
+    color: #0576B3;
+}
+
+@media screen and (max-width: 520px) {
+    .section__container {
+        display: block;
+        margin: 15px 0 0 0;
+    }
+
+    .image {
+        height: 97px;
+        position: relative;
+        text-align: center;
+        color: antiquewhite;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+
+    .data__text {
+        margin: 10px 0;
+    }
+
+    
+}
+
+
+
+/* .reportData__wrapper {
     display: block;
     margin-top: 50px;
 }
@@ -65,7 +178,9 @@
 
 img {
     opacity: 10%;
-}
+} */
+
+
 
 
 
