--- a/client/src/components/NumerologyReportData/NumerologyReportData.css
+++ b/client/src/components/NumerologyReportData/NumerologyReportData.css
@@ -16,6 +16,8 @@
 }
 
 .image {
+    background-color: darkgoldenrod;
+    background-blend-mode: screen;
     position: relative;
     text-align: center;
     color: antiquewhite;
@@ -26,27 +28,27 @@
 }
 
 .image__motivation {
-    background-image: url(https://picsum.photos/200);
+    background-image: url("https://get.pxhere.com/photo/rock-ball-struggle-push-man-hill-business-person-roll-sunset-uphill-activity-businessman-challenge-concept-dessert-difficulty-dream-effort-employee-environment-future-giant-heavy-inspiring-job-motivation-move-occupation-power-silhouette-sphere-stone-strength-success-task-worker-sky-sun-afterglow-sunrise-atmosphere-cloud-morning-horizon-sunlight-evening-dawn-dusk-ecoregion-landscape-computer-wallpaper-calm-field-meteorological-phenomenon-1448189.jpg");
 }
 
 .image__inner_self {
-    background-image: url(https://picsum.photos/201);
+    background-image: url("https://get.pxhere.com/photo/nature-girl-woman-photography-heart-portrait-model-reflection-sitting-studio-fashion-lady-hairstyle-sculpture-dress-figure-mirror-photograph-self-humor-creature-beauty-mind-spirit-psyche-character-i-mood-awareness-soul-she-identity-existence-ego-the-interior-of-the-personality-photo-shoot-wellbeing-the-act-of-mentality-esteemeth-portrait-photography-self-awareness-human-positions-art-model-being-which-inner-self-my-person-the-spiritual-image-of-the-the-mentality-of-the-disposition-of-the-face-of-the-the-spiritual-state-mental-state-the-internal-state-of-the-the-originality-of-individuality-has-the-specificity-of-the-specificity-of-the-way-of-being-the-depth-of-the-soul-810388.jpg");
 }
 
 .image__expression {
-    background-image: url(https://picsum.photos/202);
+    background-image: url("https://get.pxhere.com/photo/sea-water-structure-sunrise-sunset-morning-wave-evening-reflection-relaxation-meditation-temple-yoga-buddha-deity-center-vibrations-awareness-attention-emotion-perception-impression-wellness-personality-subconscious-mind-shiva-wave-motion-gautama-buddha-unconscious-954268.jpg");
 }
 
 .image__karmic_lessons {
-    background-image: url(https://picsum.photos/203);
+    background-image: url("https://www.publicdomainpictures.net/pictures/290000/velka/yoga-meditation.jpg");
 }
 
 .image__hidden_tendencies {
-    background-image: url(https://picsum.photos/204);
+    background-image: url("https://cdn.pixabay.com/photo/2015/04/03/19/57/cloud-705736_1280.jpg");
 }
 
 .image__subconscious_response {
-    background-image: url(https://picsum.photos/205);
+    background-image: url("https://cdn.pixabay.com/photo/2017/04/08/11/07/nerve-cell-2213009_1280.jpg");
 }
 
 .image > .number {
