--- a/client/src/components/NumerologyReport/NumerologyReport.css
+++ b/client/src/components/NumerologyReport/NumerologyReport.css
@@ -25,7 +25,7 @@
     color: #0576B3;
     width: 220px;
     height: 220px;
-    border: 9px solid #0576B3;
+    border: 9px solid darkgoldenrod;
     border-radius: 50%;
     margin: 30px 36px;
     text-align: center;
