Finished form validation and v1 styling

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -155,11 +155,12 @@ form .btn {
   padding: 14px 0;
 }
 
-.navbar__logged-in {
-  font-size: 21px;
+.navbar__btns>a {
+  font-size: 18px;
+  margin: 0 10px;
 }
 
-.navbar__logged-in>a:link,.navbar__logged-in>a:visited {
+.navbar__btns>a:link,.navbar__btns>a:visited {
   color: mintcream;
 }
 
@@ -261,7 +262,7 @@ p {
   margin: 70px 12px;
   padding: 33px 20px 70px 20px;
   background-color: #0576B3;
-  border: 7px solid darkgoldenrod;
+  border: 7px solid mintcream;
   border-radius: 22px
 }
 
@@ -275,31 +276,31 @@ p {
 
 .card__1 {
   background-position-y: bottom;
-  background-image: url("https://get.pxhere.com/photo/rock-ball-struggle-push-man-hill-business-person-roll-sunset-uphill-activity-businessman-challenge-concept-dessert-difficulty-dream-effort-employee-environment-future-giant-heavy-inspiring-job-motivation-move-occupation-power-silhouette-sphere-stone-strength-success-task-worker-sky-sun-afterglow-sunrise-atmosphere-cloud-morning-horizon-sunlight-evening-dawn-dusk-ecoregion-landscape-computer-wallpaper-calm-field-meteorological-phenomenon-1448189.jpg")
+  background-image: url('../../images/motivation.jpg')
 }
 
 .card__2 {
   background-position-y: center;
-  background-image: url("https://get.pxhere.com/photo/nature-girl-woman-photography-heart-portrait-model-reflection-sitting-studio-fashion-lady-hairstyle-sculpture-dress-figure-mirror-photograph-self-humor-creature-beauty-mind-spirit-psyche-character-i-mood-awareness-soul-she-identity-existence-ego-the-interior-of-the-personality-photo-shoot-wellbeing-the-act-of-mentality-esteemeth-portrait-photography-self-awareness-human-positions-art-model-being-which-inner-self-my-person-the-spiritual-image-of-the-the-mentality-of-the-disposition-of-the-face-of-the-the-spiritual-state-mental-state-the-internal-state-of-the-the-originality-of-individuality-has-the-specificity-of-the-specificity-of-the-way-of-being-the-depth-of-the-soul-810388.jpg")
+  background-image: url('../../images/inner-self.jpg')
 }
 
 .card__3 {
   background-position-y: center;
-  background-image: url("https://get.pxhere.com/photo/sea-water-structure-sunrise-sunset-morning-wave-evening-reflection-relaxation-meditation-temple-yoga-buddha-deity-center-vibrations-awareness-attention-emotion-perception-impression-wellness-personality-subconscious-mind-shiva-wave-motion-gautama-buddha-unconscious-954268.jpg")
+  background-image: url('../../images/expression.jpg')
 }
 
 .card__4 {
   background-position-y: center;
-  background-image: url("https://www.publicdomainpictures.net/pictures/290000/velka/yoga-meditation.jpg")
+  background-image: url('../../images/karmic-lessons.jpg')
 }
 
 .card__5 {
   background-position-y: center;
-  background-image: url("https://cdn.pixabay.com/photo/2015/04/03/19/57/cloud-705736_1280.jpg")
+  background-image: url('../../images/hidden-tendencies.jpg')
 }
 
 .card__6 {
-  background-image: url("https://cdn.pixabay.com/photo/2017/04/08/11/07/nerve-cell-2213009_1280.jpg")
+  background-image: url('../../images/subconcious-respoinse.jpg')
 }
 
 .section__3 {
@@ -392,6 +393,207 @@ a.logo:link,  a.logo:visited {
     margin: auto;
     padding: 0;
   }
+}
+
+.header_userData {
+  margin: 4% 10%;
+  text-transform: capitalize;
+  color: antiquewhite;
+}
+
+.report__name {
+  font-size: 40px;
+  margin: 10px 0 0 0;
+}
+
+.report__dob {
+  font-size: 20px;
+  margin: 10px 0 0 0;
+}
+
+.header_numData {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: mintcream;
+  padding: 21px 0;
+}
+
+.header_text {
+  color: #0576B3;
+  width: 150px;
+  height: 150px;
+  border: 9px solid darkgoldenrod;
+  border-radius: 50%;
+  margin: 1% 1%;
+  text-align: center;
+}
+
+.header_number {
+  font-size: 37px;
+}
+
+.text_container {
+  padding: 38px 11px;
+}
+
+.text_container > h2 {
+  font-size: 17px;
+  margin: 0;
+}
+
+.NumerologyReportData {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.section__container {
+  display: flex;
+  margin: 10% 0;
+  padding: 25px;
+  color: antiquewhite;
+}
+
+.section__container:nth-child(even){
+  flex-direction: row-reverse;
+}
+
+.image {
+  background-color: darkgoldenrod;
+  background-blend-mode: screen;
+  position: relative;
+  text-align: center;
+  color: antiquewhite;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  flex: 1;
+}
+
+.image__motivation {
+  background-image: url('../../images/motivation.jpg');
+}
+
+.image__inner_self {
+  background-image: url('../../images/inner-self.jpg');
+}
+
+.image__expression {
+  background-image: url('../../images/expression.jpg');
+}
+
+.image__karmic_lessons {
+  background-image: url('../../images/karmic-lessons.jpg');
+}
+
+.image__hidden_tendencies {
+  background-image: url('../../images/hidden-tendencies.jpg');
+}
+
+.image__subconscious_response {
+  background-image: url('../../images/subconcious-respoinse.jpg');
+}
+
+.image > .number {
+  font-size: 12vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: 2px 2px 8px black
+}
+
+.data__text {
+  padding: 0px 30px;
+  flex: 1;
+  margin: 70px 0;
+}
+
+.paragraph {
+  margin: 22px 0;
+}
+
+.data__text > h2 {
+  margin: 0 0 5px 0;
+  font-size: 40px;
+}
+
+.data__text > div {
+  font-size: 20px;
+}
+
+.section__container > .number {
+  font-size: 100%;
+}
+
+.header_text > a:link, .header_text > a:visited {
+  text-decoration: none;
+  color: #0576B3;
+}
+
+.section__coming-soon {
+  max-width: 750px;
+  margin: 30px auto;
+  color: antiquewhite;
+}
+
+.section__coming-soon>h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+.section__coming-soon>ul {
+  list-style-type: none;
+  font-size: 25px;
+  margin-top: 36px;
+  font-weight: bold;
+}
+
+.section__coming-soon>ul>p {
+  list-style-type: none;
+    font-size: 20px;
+    font-weight: lighter;
+    margin: 5px 9px 30px 0;
+}
+
+.login__btns>button {
+  margin: 12px 0;
+}
+
+.error {
+  font-weight: bolder;
+  margin: 10px auto;
+  padding: 22px;
+  max-width: 372px;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+
+@media screen and (max-width: 520px) {
+  .section__container {
+      display: block;
+      margin: 15px 0 0 0;
+  }
+
+  .image {
+      height: 97px;
+      position: relative;
+      text-align: center;
+      color: antiquewhite;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+  }
+
+  .data__text {
+      margin: 10px 0;
+  }
+
+  
 }
 
 /* @media screen and (max-width: 449px) {
