--- a/client/src/components/NumerologyReport/NumerologyReport.css
+++ b/client/src/components/NumerologyReport/NumerologyReport.css
@@ -1,4 +1,4 @@
-.header_userData {
+/* .header_userData {
     margin: 4% 10%;
     text-transform: capitalize;
     color: antiquewhite;
@@ -38,4 +38,4 @@
 
 .text_container {
     padding: 18% 27px;
-}
+} */
