--- a/client/src/components/NumerologyReportData/NumerologyReportData.css
+++ b/client/src/components/NumerologyReportData/NumerologyReportData.css
@@ -1,4 +1,4 @@
-.NumerologyReportData {
+/* .NumerologyReportData {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -109,7 +109,7 @@
     }
 
     
-}
+} */
 
 
 
